re PR c++/50508 ([C++0x] ICE cxx_eval_logical_expression cp/semantics.c:6487)

PR c++/50508
	* semantics.c (cxx_eval_logical_expression): Use tree_int_cst_equal
	rather than ==.

From-SVN: r179231